docs: add preview

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         />
       </div>
       <div class="slider-container">
-        <div class="text-container">Speed</div>
+        <div class="text-container">Interval</div>
         <input
           type="range"
           min="50"
