--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="speak.js"></script>
+    <script src="script.js" defer></script>
     <title>quackspeak: Text-to-quack</title>
     <link
         rel="icon"
@@ -23,36 +23,44 @@
     <main>
       <div class="container">
         <textarea
-          placeholder="Write some text here!"
-          id="inputText"
-          spellcheck="false"
+            placeholder="Write some text here!"
+            class="js-input-text"
+            spellcheck="false"
         ></textarea>
+        <div class="voice-selector-container">
+          <label class="text-container" for="voice-selector">Voice</label>
+          <select id="voice-selector" class="js-voice-selector voice-selector">
+            <option default value="quack">Quack</option>
+            <option default value="bark">Bark</option>
+            <option default value="meow">Meow</option>
+          </select>
+        </div>
         <div class="sliders">
           <div class="slider-container">
-            <div class="text-container">Pitch</div>
+            <label class="text-container" for="pitch-slider">Pitch</label>
             <input
                 type="range"
                 min="0"
                 max="2"
-                value="0.45"
+                value="0.5"
                 step="0.05"
-                class="slider"
-                id="pitchSlider" />
+                id="pitch-slider"
+                class="js-pitch-slider slider" />
           </div>
           <div class="slider-container">
-            <div class="text-container">Interval</div>
+            <label class="text-container" for="interval-slider">Interval</label>
             <input
                 type="range"
                 min="50"
                 max="200"
                 value="175"
                 step="1"
-                class="slider"
-                id="intervalSlider" />
+                id="interval-slider"
+                class="js-interval-slider slider" />
           </div>
         </div>
         <div class="button-container utils-flex-align-center">
-          <button onclick="playClip()">Say it!</button>
+          <button class="js-say-it-button">Say it!</button>
         </div>
       </div>
 
@@ -66,7 +74,7 @@
               src="assets/dialogue.png"
               alt=""
               draggable="false" />
-          <div id="dialogue-text"></div>
+          <div class="js-dialogue-text dialogue-text"></div>
         </div>
         <div class="share">
           <p class="utils-text-align-center">
