refactor: follow suggestions for refactoring.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="script.js" defer></script>
     <title>quackspeak: Text-to-quack</title>
@@ -14,10 +14,10 @@
 
   <body>
     <img
-      class="background-img"
-      src="assets/ducks-background.png"
-      alt=""
-      draggable="false"
+        class="background-img"
+        src="assets/ducks-background.png"
+        alt=""
+        draggable="false"
     />
 
     <main>
